--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "Rohini Mishra",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.3"
   }
 }
